# civitai-data-manager

./: .gitignore  LICENSE.md  README.md  civitai_data_manager.py  config.json  config.schema.json  main.py  pyproject.toml  update_config_schema.py
config_examples/: config.first-use.json  config.update.json
src/: civitai.py  data.py  download.py  file_types.py  swarmui.py
src/civitai_manager/: __init__.py
src/civitai_manager/core/: __init__.py  metadata_manager.py
src/civitai_manager/migrations/v1_5_0/: README.md  __init__.py  migrate_filenames.py
src/civitai_manager/utils/: config.py  file_tracker.py  string_utils.py
src/civitai_manager/utils/html_generators/: __init__.py  browser_page.py  model_page.py
test/: test_civitai.py  test_download.py
test_data/: ModelResponseData.json
